Updated Bulma, validator.js to latest. Fixed js enqueue to new dist file. Made accessibility fix for menu so it is now wrapped in ul and li. Various style changes.

--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -13,3 +13,25 @@
 .navbar-burger span {
     height: 2px;
 }
+
+.navbar li {
+    display: flex;
+}
+
+@media screen and (min-width: 1024px) {
+    .navbar.is-primary .navbar-start>li>a.navbar-item:focus, 
+    .navbar.is-primary .navbar-start>li>a.navbar-item:hover, 
+    .navbar.is-primary .navbar-start>li>a.navbar-item.is-active, 
+    .navbar.is-primary .navbar-start .navbar-link:focus, 
+    .navbar.is-primary .navbar-start .navbar-link:hover, 
+    .navbar.is-primary .navbar-start .navbar-link.is-active, 
+    .navbar.is-primary .navbar-end>li>a.navbar-item:focus, 
+    .navbar.is-primary .navbar-end>li>a.navbar-item:hover, 
+    .navbar.is-primary .navbar-end>li>a.navbar-item.is-active, 
+    .navbar.is-primary .navbar-end .navbar-link:focus, 
+    .navbar.is-primary .navbar-end .navbar-link:hover, 
+    .navbar.is-primary .navbar-end .navbar-link.is-active {
+        background-color: #6b1414;
+        color: #fff;
+    }
+}
